contrast fix

--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -37,7 +37,7 @@ header {
 }
 
 #navWrapper {
-  background-color: lightslategray;
+  background-color: slategray;
 }
 
 nav {
